added test application for netron (ticket #867)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2782 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.ExtLibs/HeuristicLab.Netron/3.0.2672.12446/HeuristicLab.Netron-3.0.2672.12446/HeuristicLab.Netron-3.0.2672.12446.csproj
+++ b/sources/HeuristicLab.ExtLibs/HeuristicLab.Netron/3.0.2672.12446/HeuristicLab.Netron-3.0.2672.12446/HeuristicLab.Netron-3.0.2672.12446.csproj
@@ -49,6 +49,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NetronForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NetronForm.Designer.cs">
+      <DependentUpon>NetronForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NetronTestApplication.cs" />
     <Compile Include="NetronVisualization.cs">
       <SubType>Component</SubType>
     </Compile>
