--- a/sources/HeuristicLab.PluginInfrastructure/app.config
+++ b/sources/HeuristicLab.PluginInfrastructure/app.config
@@ -26,7 +26,7 @@
     <system.serviceModel>
         <bindings>
             <wsHttpBinding>
-                <binding name="WSHttpBinding_IUpdateLocation" closeTimeout="00:01:00"
+                <binding name="WSHttpBinding_IUpdate" closeTimeout="00:01:00"
                     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
                     bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
                     maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
@@ -46,9 +46,9 @@
             </wsHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:59253/UpdateLocation.svc"
-                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IUpdateLocation"
-                contract="UpdateLocationReference.IUpdateLocation" name="WSHttpBinding_IUpdateLocation">
+            <endpoint address="http://localhost:8731/Design_Time_Addresses/HeuristicLab.Services.Deployment/Update/"
+                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IUpdate"
+                contract="PluginUpdateService.IUpdate" name="WSHttpBinding_IUpdate">
                 <identity>
                     <dns value="localhost" />
                 </identity>
