Added uniform crossover operator for bit-vectors. #869 (UniformCrossover for Bitvectors)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2786 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.BitVector/3.2/HeuristicLab.BitVector-3.2.csproj
+++ b/sources/HeuristicLab.BitVector/3.2/HeuristicLab.BitVector-3.2.csproj
@@ -73,6 +73,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UniformCrossover.cs" />
     <Compile Include="RandomBitVectorGenerator.cs" />
     <Compile Include="HeuristicLabBitVectorPlugin.cs" />
     <Compile Include="BitVectorCrossoverBase.cs" />
