--- a/sources/HeuristicLab.Operators/3.3/HeuristicLab.Operators-3.3.csproj
+++ b/sources/HeuristicLab.Operators/3.3/HeuristicLab.Operators-3.3.csproj
@@ -97,6 +97,7 @@
     <Compile Include="ScopeCleaner.cs" />
     <Compile Include="SequentialSubScopesProcessor.cs" />
     <Compile Include="StochasticBranch.cs" />
+    <Compile Include="SubScopesCreator.cs" />
     <Compile Include="SubScopesRemover.cs" />
     <Compile Include="SubScopesSorter.cs" />
     <Compile Include="DoubleCounter.cs" />
@@ -109,11 +110,8 @@
     <Compile Include="Operator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SingleSuccessorOperator.cs" />
-    <Compile Include="SubScopesCreater.cs" />
     <Compile Include="ValuesCollector.cs" />
-    <Compile Include="VariableInjector.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="VariableCreator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\HeuristicLab.Collections\3.3\HeuristicLab.Collections-3.3.csproj">
