Operator architecture refactoring (#95)  * worked on parameters, TSP and selection
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2805 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Operators.Views/3.3/HeuristicLab.Operators.Views-3.3.csproj
+++ b/sources/HeuristicLab.Operators.Views/3.3/HeuristicLab.Operators.Views-3.3.csproj
@@ -80,6 +80,12 @@
     <Compile Include="MultipleCallsOperatorView.Designer.cs">
       <DependentUpon>MultipleCallsOperatorView.cs</DependentUpon>
     </Compile>
+    <Compile Include="OperatorView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="OperatorView.Designer.cs">
+      <DependentUpon>OperatorView.cs</DependentUpon>
+    </Compile>
     <Compile Include="ValuesCollectorView.cs">
       <SubType>UserControl</SubType>
     </Compile>
