--- a/sources/HeuristicLab.PluginInfrastructure/app.config
+++ b/sources/HeuristicLab.PluginInfrastructure/app.config
@@ -24,35 +24,7 @@
         </HeuristicLab.PluginInfrastructure.Properties.Settings>
     </applicationSettings>
     <system.serviceModel>
-        <bindings>
-            <wsHttpBinding>
-                <binding name="WSHttpBinding_IUpdate" closeTimeout="00:01:00"
-                    openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
-                    bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
-                    maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
-                    messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true"
-                    allowCookies="false">
-                    <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
-                        maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-                    <reliableSession ordered="true" inactivityTimeout="00:10:00"
-                        enabled="false" />
-                    <security mode="Message">
-                        <transport clientCredentialType="Windows" proxyCredentialType="None"
-                            realm="" />
-                        <message clientCredentialType="Windows" negotiateServiceCredential="true"
-                            algorithmSuite="Default" establishSecurityContext="true" />
-                    </security>
-                </binding>
-            </wsHttpBinding>
-        </bindings>
-        <client>
-            <endpoint address="http://localhost:8731/Design_Time_Addresses/HeuristicLab.Services.Deployment/Update/"
-                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IUpdate"
-                contract="PluginUpdateService.IUpdate" name="WSHttpBinding_IUpdate">
-                <identity>
-                    <dns value="localhost" />
-                </identity>
-            </endpoint>
-        </client>
+        <bindings />
+        <client />
     </system.serviceModel>
 </configuration>
