--- a/sources/HeuristicLab.PluginInfrastructure/app.config
+++ b/sources/HeuristicLab.PluginInfrastructure/app.config
@@ -26,7 +26,7 @@
     <system.serviceModel>
         <bindings>
             <wsHttpBinding>
-                <binding name="WSHttpBinding_IUpdate" closeTimeout="00:01:00"
+                <binding name="WSHttpBinding_IUpdate2" closeTimeout="00:01:00"
                     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
                     bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
                     maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
@@ -43,7 +43,7 @@
                             algorithmSuite="Default" establishSecurityContext="true" />
                     </security>
                 </binding>
-                <binding name="WSHttpBinding_IAdmin" closeTimeout="00:01:00"
+                <binding name="WSHttpBinding_IAdmin2" closeTimeout="00:01:00"
                     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
                     bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
                     maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
@@ -64,17 +64,17 @@
         </bindings>
         <client>
             <endpoint address="http://localhost:8731/Design_Time_Addresses/HeuristicLab.Services.Deployment/Update/"
-                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IUpdate"
+                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IUpdate2"
                 contract="HeuristicLab.PluginInfrastructure.Advanced.DeploymentService.IUpdate"
-                name="WSHttpBinding_IUpdate">
+                name="WSHttpBinding_IUpdate2">
                 <identity>
                     <dns value="localhost" />
                 </identity>
             </endpoint>
             <endpoint address="http://localhost:8731/Design_Time_Addresses/HeuristicLab.Services.Deployment/Admin/"
-                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IAdmin"
+                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IAdmin2"
                 contract="HeuristicLab.PluginInfrastructure.Advanced.DeploymentService.IAdmin"
-                name="WSHttpBinding_IAdmin">
+                name="WSHttpBinding_IAdmin2">
                 <identity>
                     <dns value="localhost" />
                 </identity>
