Operator architecture refactoring (#95)  * worked on selection
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2817 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Selection/3.3/HeuristicLab.Selection-3.3.csproj
+++ b/sources/HeuristicLab.Selection/3.3/HeuristicLab.Selection-3.3.csproj
@@ -81,6 +81,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLabSelectionPlugin.cs.frame" />
+    <Compile Include="LeftReducer.cs" />
+    <Compile Include="MergingReducer.cs" />
+    <Compile Include="Reducer.cs" />
+    <Compile Include="LinearRankSelector.cs" />
+    <Compile Include="ProportionalSelector.cs" />
+    <Compile Include="RightReducer.cs" />
     <Compile Include="RightSelector.cs" />
     <Compile Include="StochasticSelector.cs" />
     <Compile Include="LeftSelector.cs" />
