Added MPX and PMX together with reference (#889)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2820 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Permutation/3.3/HeuristicLab.Permutation-3.3.csproj
+++ b/sources/HeuristicLab.Permutation/3.3/HeuristicLab.Permutation-3.3.csproj
@@ -84,6 +84,8 @@
     <Compile Include="InversionManipulator.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="MaximalPreservativeCrossover.cs" />
+    <Compile Include="PartiallyMatchedCrossover.cs" />
     <Compile Include="PermutationManipulator.cs" />
     <Compile Include="HeuristicLabPermutationPlugin.cs" />
     <Compile Include="OrderCrossover.cs" />
