Implemented CyclicCrossover, updated documentation in MaximalPreservativeCrossover and PartiallyMatchedCrossover #889
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2829 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Permutation/3.3/HeuristicLab.Permutation-3.3.csproj
+++ b/sources/HeuristicLab.Permutation/3.3/HeuristicLab.Permutation-3.3.csproj
@@ -81,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLabPermutationPlugin.cs.frame" />
+    <Compile Include="CyclicCrossover.cs" />
     <Compile Include="InversionManipulator.cs">
       <SubType>Code</SubType>
     </Compile>
