Operator architecture refactoring (#95)  * worked on operators and SGA  * improved performance
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2830 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Operators.Views/3.3/HeuristicLab.Operators.Views-3.3.csproj
+++ b/sources/HeuristicLab.Operators.Views/3.3/HeuristicLab.Operators.Views-3.3.csproj
@@ -67,11 +67,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CombinedOperatorView.cs">
+    <Compile Include="AlgorithmOperatorView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="CombinedOperatorView.Designer.cs">
-      <DependentUpon>CombinedOperatorView.cs</DependentUpon>
+    <Compile Include="AlgorithmOperatorView.Designer.cs">
+      <DependentUpon>AlgorithmOperatorView.cs</DependentUpon>
     </Compile>
     <None Include="HeuristicLabOperatorsViewsPlugin.cs.frame" />
     <Compile Include="MultipleCallsOperatorView.cs">
