Moved !CollectionItemsChanged events into own interfaces (#819)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2832 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Collections/3.3/HeuristicLab.Collections-3.3.csproj
+++ b/sources/HeuristicLab.Collections/3.3/HeuristicLab.Collections-3.3.csproj
@@ -66,6 +66,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLabCollectionsPlugin.cs.frame" />
+    <Compile Include="INotifyObservableListItemsChanged.cs" />
+    <Compile Include="INotifyObservableKeyedCollectionItemsChanged.cs" />
+    <Compile Include="INotifyObservableDictionaryItemsChanged.cs" />
+    <Compile Include="INotifyObservableCollectionItemsChanged.cs" />
+    <Compile Include="INotifyObservableArrayItemsChanged.cs" />
     <Compile Include="ReadOnlyObservableArray.cs" />
     <Compile Include="ObservableArray.cs" />
     <Compile Include="IObservableArray.cs" />
